[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Axel791 <HS.Kazakov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pydantic = "^2.0.2"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
dependency-injector = "^4.41.0"
alembic = "^1.11.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
