[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Axel791 <HS.Kazakov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "^3.10"
fastapi = "^0.100.0"
passlib = "^1.7.4"
pydantic = "^1.10.7"
python-jose = "^3.3.0"
redis = "^4.5.5"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
dependency-injector = "^4.41.0"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
aioredis = "^2.0.1"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"
opentelemetry-instrumentation-fastapi = "^0.40b0"
opentelemetry-exporter-jaeger = "^1.19.0"
google-auth = "^2.0.2"
google-auth-oauthlib = "^0.4.5"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.22.0"
sentry-sdk = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
