[tool.poetry]
name = "etl"
version = "0.1.0"
description = "aaa"
authors = ["Axel791 <HS.Kazakov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
elasticsearch = "^8.7.0"
pedantic = "^1.14.5"
pydantic = "^1.10.7"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
