[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lucykomarovskikh <lucy_komar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
loguru = "^0.7.0"
aiohttp = "^3.8.4"
confluent-kafka = "^2.2.0"
python-schema-registry-client = "^2.5.0"
clickhouse-driver = "^0.2.6"
avro = "^1.11.2"